--- a/bennett_matthew_stephen_shield_assignment1.ipynb
+++ b/bennett_matthew_stephen_shield_assignment1.ipynb
@@ -27,7 +27,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#testing git"
+   ]
   },
   {
    "cell_type": "code",
@@ -67,7 +69,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
