--- a/bennett_matthew_stephen_shield_assignment1.ipynb
+++ b/bennett_matthew_stephen_shield_assignment1.ipynb
@@ -12,9 +12,15 @@
     "    sum = 0\n",
     "    for i in range(0, len(vec1)):\n",
     "        sum += math.pow(vec1[i]-vec2[i],2)\n",
-    "    return math.sqrt(sum)\n",
-    "\n",
-    "\n",
+    "    return math.sqrt(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def manhattan_distance(vec1, vec2):\n",
     "    sum = 0\n",
     "    for i in range(0, len(vec1)):\n",
@@ -24,24 +30,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def accuracy_generalization_error(vec1, vec2):\n",
+    "    dproduct = 0\n",
+    "    magnitude_1 = 0\n",
+    "    magnitude_2 = 0\n",
+    "    for i in range(0, len(vec1)):\n",
+    "        dproduct += vec1[i] * vec2[i]\n",
+    "        magnitude_1 += math.pow(vec1[i],2)\n",
+    "        magnitude_2 += math.pow(vec2[i],2)\n",
+    "    \n",
+    "#     return math.acos(dproduct/(math.sqrt(magnitude_1)*math.sqrt(magnitude_2)))\n",
+    "    return dproduct/(math.sqrt(magnitude_1)*math.sqrt(magnitude_2))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.28690229202651557"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vec1 = [1,2,3]\n",
+    "vec2 = [10,2,-1]\n",
+    "accuracy_generalization_error(vec1, vec2)"
+   ]
   },
   {
    "cell_type": "code",
