--- a/bennett_matthew_stephen_shield_assignment1.ipynb
+++ b/bennett_matthew_stephen_shield_assignment1.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,22 +43,23 @@
     "        magnitude_1 += math.pow(vec1[i],2)\n",
     "        magnitude_2 += math.pow(vec2[i],2)\n",
     "    \n",
+    "    accuracy = dproduct/(math.sqrt(magnitude_1)*math.sqrt(magnitude_2))\n",
     "#     return math.acos(dproduct/(math.sqrt(magnitude_1)*math.sqrt(magnitude_2)))\n",
-    "    return dproduct/(math.sqrt(magnitude_1)*math.sqrt(magnitude_2))"
+    "    return accuracy, 1-accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.28690229202651557"
+       "(0.28690229202651557, 0.7130977079734844)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
