--- a/bennett_matthew_stephen_shield_assignment1.ipynb
+++ b/bennett_matthew_stephen_shield_assignment1.ipynb
@@ -34,7 +34,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#testing git"
+    "def accuracy_generalization_error(vec1, vec2):\n",
+    "    dproduct = 0\n",
+    "    magnitude_1 = 0\n",
+    "    magnitude_2 = 0\n",
+    "    for i in range(0, len(vec1)):\n",
+    "        dproduct += vec1[i] * vec2[i]\n",
+    "        magnitude_1 += math.pow(vec1[i],2)\n",
+    "        magnitude_2 += math.pow(vec2[i],2)\n",
+    "    \n",
+    "    accuracy = dproduct/(math.sqrt(magnitude_1)*math.sqrt(magnitude_2))\n",
+    "#     return math.acos(dproduct/(math.sqrt(magnitude_1)*math.sqrt(magnitude_2)))\n",
+    "    return accuracy, 1-accuracy"
    ]
   },
   {
