--- a/bennett_matthew_stephen_shield_assignment1.ipynb
+++ b/bennett_matthew_stephen_shield_assignment1.ipynb
@@ -6,13 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
+    "import numpy as np\n",
     "\n",
     "def euclidean_distance(vec1, vec2):\n",
-    "    sum = 0\n",
-    "    for i in range(0, len(vec1)):\n",
-    "        sum += math.pow(vec1[i]-vec2[i],2)\n",
-    "    return math.sqrt(sum)"
+    "    return np.linalg.norm(vec1-vec2)"
    ]
   },
   {
@@ -22,10 +19,8 @@
    "outputs": [],
    "source": [
     "def manhattan_distance(vec1, vec2):\n",
-    "    sum = 0\n",
-    "    for i in range(0, len(vec1)):\n",
-    "        sum += math.fabs(vec1[i] - vec2[i])\n",
-    "    return sum"
+    "    vector_abs = np.abs(vec1-vec2)\n",
+    "    return np.sum(vector_abs)"
    ]
   },
   {
@@ -34,22 +29,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def accuracy_generalization_error(vec1, vec2):\n",
-    "    dproduct = 0\n",
-    "    magnitude_1 = 0\n",
-    "    magnitude_2 = 0\n",
-    "    for i in range(0, len(vec1)):\n",
-    "        dproduct += vec1[i] * vec2[i]\n",
-    "        magnitude_1 += math.pow(vec1[i],2)\n",
-    "        magnitude_2 += math.pow(vec2[i],2)\n",
-    "    \n",
-    "    accuracy = dproduct/(math.sqrt(magnitude_1)*math.sqrt(magnitude_2))\n",
-    "    return accuracy, 1-accuracy"
+    "def accuracy_generalization_error(predicted, actual):\n",
+    "    accuracy = np.sum(predicted == actual)\n",
+    "    return accuracy/len(actual), 1-(accuracy/len(actual))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +52,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def confusion_matrix(predicted, actual):\n",
+    "    tn = 0\n",
+    "    tp = 0\n",
+    "    fn = 0\n",
+    "    fp = 0\n",
+    "    for i in range(0, len(predicted)):\n",
+    "        if predicted[i] == actual[i] and actual[i] == 0:\n",
+    "            tn += 1\n",
+    "        elif predicted[i] == actual[i] and actual[i] == 1:\n",
+    "            tp += 1\n",
+    "        elif predicted[i] != actual[i] and actual[i] == 0:\n",
+    "            fp += 1\n",
+    "        elif predicted[i] != actual[i] and actual[i] == 1:\n",
+    "            fn += 1\n",
+    "            \n",
+    "    return np.array([[tn, fp],[fn, tp]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +107,42 @@
     "    auc=abs(np.trapz(y,x, axis=-1))\n",
     "    return auc"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pr_curve(true_classes, class_probabilities):\n",
+    "    \"\"\"Given true classes and class probabilities calculates precision and recall values and returns them and the thresholds as lists that can be used to construct a PR curve\"\"\"\n",
+    "    true_classes, class_probabilities = np.asarray(true_classes) , np.asarray(class_probabilities)\n",
+    "    p_values=[]\n",
+    "    r_values=[]\n",
+    "    thresholds=[]\n",
+    "    for threshold in range(100):\n",
+    "        predicted_classes=(class_probabilities > float(threshold/100.)).astype(int)\n",
+    "        p=np.sum(predicted_classes[np.where(predicted_classes == 1 )]  == true_classes[np.where(predicted_classes == 1 )])/predicted_classes[np.where(predicted_classes == 1 )].shape[0]\n",
+    "        r=np.sum(predicted_classes[np.where(predicted_classes == 1 )]  == true_classes[np.where(predicted_classes == 1 )])/true_classes[np.where(true_classes == 1 )].shape[0]\n",
+    "        p_values.append(p)\n",
+    "        r_values.append(r)\n",
+    "        thresholds.append(threshold)\n",
+    "    return p_values,r_values, thresholds\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
