--- a/bennett_matthew_stephen_shield_assignment1.ipynb
+++ b/bennett_matthew_stephen_shield_assignment1.ipynb
@@ -854,8 +854,10 @@
     "        \n",
     "    return confidence\n",
     "\n",
-    "print('confident in accuracy by +/-' ,bootstrap_confidence(y_test_predicted,y_test,accuracy_calc,0.1))\n",
-    "\n"
+    "print('confident in precision by +/-' ,bootstrap_confidence(y_test_predicted,y_test,precision,0.1))\n",
+    "print('confident in recall by +/-' ,bootstrap_confidence(y_test_predicted,y_test,recall,0.1))\n",
+    "print('confident in F1 score by +/-' ,bootstrap_confidence(y_test_predicted,y_test,f1_score,0.1))\n",
+    "print('confident in accuracy by +/-' ,bootstrap_confidence(y_test_predicted,y_test,accuracy_calc,0.1))"
    ]
   }
  ],
@@ -875,7 +877,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
